STABLE - trying INCINERATE LTM sim
runs locally

--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,18 @@ merged_file_unique.csv
 
 .DS_Store
 
-old*
-# *.xlsx
+# Python virtual environments
+.venv/
+py310_venv/
 
-# venv
-.venv
-py310_venv
+# Data files
+merged_file_unique.csv
+# *.xlsx    # Uncomment if you want to ignore all Excel files
+
+# Results files
+simulation_results/
+
+# Scripts (ignored intentionally)
 check_fips.py
 data_cleaning.py
 .DS_Store
