--- a/py/requirements.txt
+++ b/py/requirements.txt
@@ -2,6 +2,9 @@
 Flask>=2.3.3
 Flask-Cors>=4.0.0
 
+# --- Earth Engine ---
+earthengine-api>=1.6.15
+
 # --- Geospatial & Numerical Support ---
 numpy>=1.23.0
 scipy>=1.10.0
@@ -14,5 +17,3 @@ rasterio>=1.3.9
 # --- Logging / Utilities ---
 loguru>=0.7.0
 
-# --- Optional (if using topojson or d3 backend generation) ---
-topojson>=1.7
