UNSTABLE - migrate to vite, fix import, not fully tested

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 .venv/
 py310_venv/
 
+# Node modules
+node_modules/
+
 # Data files
 merged_file_unique.csv
 # *.xlsx    # Uncomment if you want to ignore all Excel files
