--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@ py310_venv/
 # Node modules
 node_modules/
 
+# Vite
+.vite/
+dist/
+
 # Data files
 merged_file_unique.csv
 # *.xlsx    # Uncomment if you want to ignore all Excel files
@@ -21,3 +25,6 @@ data_cleaning.py
 __pycache__/
 old_*
 .resources.md
+
+# VSCode settings
+.vscode/
